--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,12 @@
+:root {
+    --mobile-breakpoint: 768px;
+}
+
 body {
-    font-family: 'Inter', sans-serif
+    font-family: 'Inter', sans-serif;
+    height: 100%;
+}
+
+#root {
+    height: 100%;
 }
